[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warracker-mcp"
version = "0.1.0"
description = "MCP server for Warracker warranty management"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["mcp", "warracker", "warranty"]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
warracker-mcp = "warracker_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["warracker_mcp"]
